fix: editing button showing on mobile

--- a/menu-app/src/styles.scss
+++ b/menu-app/src/styles.scss
@@ -161,14 +161,14 @@ button {
 //mobile
 @media only screen and (max-width: 600px) {
   .desktop {
-    display: none;
+    display: none !important;
   }
 }
 
 //desktop
 @media only screen and (min-width: 600px) {
   .mobile {
-    display: none;
+    display: none !important;
   }
 }
 
